[project]
name = "cox-bnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lifelines>=0.30.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
    "ucimlrepo>=0.0.7",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
